<resources>
    <string name="app_name">Paw Pals Group 5</string>
    <string name="username">username</string>
    <string name="password">password</string>
    <string name="login">Login</string>
    <string name="no_account_register_here">No account? Register here</string>
    <string name="welcome_to_pawpals">Welcome to PawPals!</string>
    <string name="register">Register</string>
    <string name="join_pawpals_now">Join PawPals now!</string>
    <string name="home">Home</string>
    <string name="spotlight">Spotlight</string>
    <string name="post">Post</string>
    <string name="me">Me</string>
    <string name="settings">Settings</string>
    <string name="post_image">Post Image</string>
    <string name="like">Like</string>
    <string name="follow">Follow</string>
    <string name="content_placeholder">Fragment Section: %1$d</string>
    <string name="chat_history">Chat History</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="user_profile_picture">user profile picture</string>
    <string name="send">Send</string>
    <string name="camera">camera</string>
    <string name="description">description</string>
    <string name="select">select</string>
    <string name="sent_message">Sent message</string>
    <string name="timestamp">Timestamp</string>
    <string name="received_message">Received message</string>
    <string name="channel_name">Chat Notifications</string>
    <string name="channel_description">Notifications for new chat messages</string>
    <string name="notification_icon_desc">Notification icon</string>
</resources>