<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".PostActivity">

    <ImageView
        android:id="@+id/postImageView"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:contentDescription="@string/post_image"
        android:scaleType="centerCrop" />

    <EditText
        android:id="@+id/postDescriptionEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/description"
        android:inputType="textMultiLine"
        android:minHeight="100dp"
        android:textSize="16sp"
        android:autofillHints="" />

    <Button
        android:id="@+id/selectImageButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/select" />

    <Button
        android:id="@+id/captureImageButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/camera" />

    <Button
        android:id="@+id/postButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/post" />
</LinearLayout>
