<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="8dp">

    <ImageView
        android:id="@+id/profileImageView"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:src="@drawable/user_default"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/usernameTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="Username"
        android:layout_marginStart="8dp"
        app:layout_constraintStart_toEndOf="@+id/profileImageView"
        app:layout_constraintTop_toTopOf="@+id/profileImageView"
        app:layout_constraintBottom_toBottomOf="@+id/profileImageView"
        app:layout_constraintEnd_toStartOf="@+id/followImageView" />

    <ImageView
        android:id="@+id/followImageView"
        android:layout_width="20dp"
        android:layout_height="30dp"
        android:src="@drawable/plus"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/profileImageView"
        android:contentDescription="@string/follow" />

    <ImageView
        android:id="@+id/postImageView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:src="@drawable/puppy"
        android:scaleType="centerCrop"
        android:layout_marginTop="8dp"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintTop_toBottomOf="@+id/profileImageView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:contentDescription="@string/post_image" />

    <TextView
        android:id="@+id/descriptionTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="Description text goes here."
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/postImageView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />
    <TextView
        android:id="@+id/numLikeTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="O likes"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/descriptionTextView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textStyle="bold"/>

    <ImageView
        android:id="@+id/likeImageView"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:src="@drawable/paw_white"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/descriptionTextView"
        app:layout_constraintEnd_toEndOf="parent"
        android:contentDescription="@string/like" />

    <ImageView
        android:id="@+id/chatImageView"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="48dp"
        android:contentDescription="@string/like"
        android:src="@drawable/chat"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/descriptionTextView" />

    <TextView
        android:id="@+id/timestampTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="2024-04-09 12:00:00"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/numLikeTextView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
